# c_deps

./: .envrc  .gitignore  .gitmodules  Chan-test.sh  Dev-chan-test.sh  Makefile  meson.build  meson_options.txt  term-tests-test.sh
alloc-or-die-test/: alloc-or-die-test.c  meson.build
base64-simple-test/: base64-simple-test.c  meson.build
base64-test/: base64-test.c  meson.build
bestline-test/: bestline-test.c  meson.build
bitfield-test/: bitfield-test.c  meson.build
blocks-test/: blocks-test.c  bt  meson.build
c-go-interface/: .gitignore  Makefile  c_adder.c  c_hello.c  meson.build
c-go-interface/c-adder/: adder.c
c-go-interface/c-call-libadder/: main.c
c-go-interface/c-hello/: hello.c
c-go-interface/c-libadder/: c-libadder.c
c-go-interface/c-restic/: c-restic.c
c-go-interface/c-ui/: ui.c
c-go-interface/go-hello/: hello_lib.go
c-go-interface/go-ui/: Makefile  go.sum  ui.go
c-go-interface/go_adder/: Makefile
c-go-interface/go_hello/: Makefile  hello.go
c-meson-utils/: c-meson-utils.c  c-meson-utils.h  meson.build
c-meson-utils-cli/: c-meson-utils-cli.c  c-meson-utils-cli.h  meson.build
c-meson-utils-test/: c-meson-utils-test.c  c-meson-utils-test.h  meson.build
cgif-test/: cgif-test.c  meson.build
chan-test/: chan-test.c  chan-test.h  meson.build
chfreq-test/: chfreq-test.c  meson.build
ck-test/: ck-test.c  ck-test.h  meson.build
clamp-test/: clamp-test.c  meson.build
closefrom-test/: closefrom-test.c  meson.build
confirm1/: confirm1.c  confirm1.go  confirm1.h  meson.build
confuse-test/: confuse-test.c  meson.build
csplit-test/: csplit-test.c  meson.build
ctable/: ctable-main.c  ctable-test.c  ctable-test.h  ctable.h  meson.build
ctable-test/: ctable-test.c  meson.build
dbgp-test/: dbgp-test.c  dbgp-test.h  meson.build
debug-print-test/: debug-print-test.c  meson.build
deps-test/: deps-test.c  deps-test.c.all  deps-test.h  meson.build
dotenv-test/: dotenv-test.c  meson.build
ee-test/: ee-test.c  ee-test.h  meson.build
etc/: bashful-vars.yaml  bashful.mk  clean.mk  config.yaml  entr.mk  fzf.mk  git.mk  includes.mk  introspect.mk  loc.mk  meson-repos-info.yaml  meson-repos.yaml  meson.mk  muon-repos.yaml  muon.mk  nodemon.mk  paths.mk  python.mk  reference-data.yaml  scc.mk  setup.mk  template-subdir-binary_c.j2  template-subdir-binary_h.j2  template-subdir-binary_meson.build.j2  template-subdir-library_c.j2  template-subdir-library_h.j2  template-subdir-library_meson.build.j2  template-subdir-module_c.j2  template-subdir-module_h.j2  template-subdir-module_meson.build.j2  template-subdir-test_c.j2  template-subdir-test_h.j2  template-subdir-test_meson.build.j2  template-test-case_c.j2  template-test-case_h.j2  template-test-case_meson.build.j2  tidy.mk  tools.mk  uncrustify.cfg  uncrustify.mk
eventemitter-test/: eventemitter-test.c  meson.build
exec-fzf/: exec-fzf-effects.h  exec-fzf.c  exec-fzf.h  meson.build
exec-fzf-test/: exec-fzf-test.c  exec-fzf-test.h  meson.build
expboff-test/: expboff-test.c  meson.build
extname-test/: extname-test.c  extname-test.h  meson.build
fancy-progress-test/: fancy-progress-test.c  meson.build
filecopy-test/: filecopy-test.c  meson.build
font-test/: font-test.c  meson.build
fort-test/: fort-test.c  fort-test.h  meson.build
generic-print-test/: generic-print-test.c  meson.build
genpassword-test/: genpassword-test.c  meson.build
get-next-line-test/: get-next-line-test.c  meson.build
go-libproc-test/: go-libproc-test.c  meson.build
gumbo-test/: gumbo-test.c  gumbo-test.h  meson.build
hash-test/: hash-test.c  meson.build
hashmap-test/: hashmap-test.c  hashmap-test.h  meson.build
hexify-test/: hexify-test.c  meson.build
hmac-sha256-test/: hmac-sha256-test.c  meson.build
hs/: hs.c  hs.h  meson.build
hs-test/: hs-test.c  hs-test.h  meson.build
http-get-test/: http-get-test.c  meson.build
httpserver-test/: httpserver-test.c  httpserver-test.h  meson.build
imagequant-test/: imagequant-test.c  imagequant-test.h  meson.build
introspect/: introspect.c  introspect.h  meson.build
introspect-repos/: introspect-repos.c  introspect-repos.h  meson.build
introspect-repos-test/: introspect-repos-test.c  introspect-repos-test.h  meson.build
introspect-test/: introspect-test.c  introspect-test.h  meson.build
iowow-compound-test/: iowow-compound-test.c  iowow-compound-test.h  meson.build
iowow-test/: iowow-test.c  meson.build
is-number-test/: is-number-test.c  meson.build
kgflags-test/: kgflags-test.c  kgflags-test.h  meson.build
layout-test/: layout-test.c  meson.build
levenshtein-test/: levenshtein-test.c  meson.build
libcyaml-test/: libcyaml-test.c  libcyaml-test.h  meson.build
libdefer-test/: libdefer-test.c  meson.build
libmonitors-test/: libmonitors-test.c  meson.build
librnd-test/: librnd-test.c  meson.build
libspinner-test/: libspinner-test.c  meson.build
libtermkey-test/: libtermkey-test.c  meson.build
libtrycatch-test/: libtrycatch-test.c  meson.build
libtty-test/: libtty-test.c  libtty-test.h  meson.build
libutf8-test/: libutf8-test.c  meson.build
list-test/: list-test.c  list-test.h  meson.build
lodepng/: lodepng.c  lodepng.h  meson.build
log-test/: log-test.c  log-test.h  meson.build
logy-test/: logy-test.c  meson.build
match/: match.c  match.h  meson.build
match-test/: match-test.c  match-test.h  meson.build
md5-test/: md5-test.c  meson.build
memory-leak-detector-test/: memory-leak-detector-test.c  memory-leak-detector-test.h  meson.build
meson/: collect_submodule_info.sh  ls_configured_submodules.sh  ls_deps.sh  ls_library_deps.sh  ls_submodules.sh  ls_unconfigured_submodules.sh  meson.build  new_dep.sh  test_new_unconfigured_submodules.sh
metaref-test/: meson.build  metaref-test.c  metaref-test.h
microhex-test/: meson.build  microhex-test.c  microhex-test.h
microtar-test/: meson.build  microtar-test.c
minmax-test/: meson.build  minmax-test.c
movewin-test/: meson.build  movewin-test.c
msgbox-test/: meson.build  msgbox-test.c
msgpack-test/: meson.build  msgpack-test.c
(+256 files in other folders)
