option('ttyrescue-path', type : 'string', value : '/usr/libexec')
option('enable-binaries',
  type : 'boolean',
  value : true,
  description : 'Enables binaries.'
)
option('enable-binary-tests',
  type : 'boolean',
  value : true,
  description : 'Enables binary tests.'
)
option('enable-greatest-tests',
  type : 'boolean',
  value : true,
  description : 'Enables greatest tests.'
)


option('enable-deps-test',
  type : 'boolean',
  value : false,
  description : 'Enables deps-test tests.'
)

